fixed error in socket and nextauth

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ Pusher_Key=b7c5d0cc0b636650922c
 Pusher_Secret=476bfd1e696f1b501b1d
 Pusher_Cluster=ap2
 NEXTAUTH_SECRET=thisisnextauthsecret
+NEXTAUTH_URL=http://localhost:3000
